# ao_fishing_bot

./: .gitignore  CMakeLists.txt  DebugDrawer.cpp  DebugDrawer.h  FishingBot.cpp  FishingBot.h  FishingClassifier.cpp  FishingClassifier.h  GameScreen.cpp  GameScreen.h  GameScreen_CUDA.cpp  GameScreen_OPENCL.cpp  LICENSE  README.md  Tools.cpp  Tools.h  config.json  main.cpp
train/: model_summary.txt  requirements.txt  train_fishing_classifier.py
